--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ a:hover {
   color: greenyellow;
 }
 
-@media (max-width: 800px) {}
+@media (max-width: 800px) {
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
