--- a/style.css
+++ b/style.css
@@ -8,12 +8,10 @@ a:hover {
   color: greenyellow;
 }
 
-@media (max-width: 800px) {
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1em;
-}
 }
 
 h3 {
@@ -22,4 +20,10 @@ h3 {
 
 p {
   text-align: justify;
+}
+
+@media (max-width: 800px) {
+  .content{
+    display: block;
+  }
 }
