--- a/style.css
+++ b/style.css
@@ -8,10 +8,19 @@ a:hover {
   color: greenyellow;
 }
 
+header, ol {
+  display: flex;
+  justify-content: center;
+}
+
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1em;
+}
+
+h1 {
+  display: none;
 }
 
 h3 {
@@ -22,8 +31,10 @@ p {
   text-align: justify;
 }
 
-@media (max-width: 800px) {
-  .content{
+@media (max-width: 600px) {
+  .content, body, ol {
     display: block;
-  }
+    margin-left: -0.75em;
+    margin-right: -0.75em;
+    font-size: 95%;
 }
