--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 * {
   font-family: Book Antiqua;
-  margin: 1em;
   line-height: 1.5;
+}
+
+body {
+  margin: 1em;
 }
 
 a:hover {
@@ -11,12 +14,19 @@ a:hover {
 header, ol {
   display: flex;
   justify-content: center;
+  margin-top: 2em;
+}
+
+.menu {
+  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 1em;
+  column-gap: 4em;
+  margin: 2em;
 }
 
 h1 {
@@ -34,7 +44,6 @@ p {
 @media (max-width: 600px) {
   .content, body, ol {
     display: block;
-    margin-left: -0.75em;
-    margin-right: -0.75em;
+    margin: 1em;
     font-size: 95%;
 }
