Maybe true fixes!!

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
 }
 
-body {
-  margin: 1em;
+section {
+  margin: 2em;
 }
 
 a:hover {
@@ -25,8 +25,7 @@ header, ol {
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 4em;
-  margin: 2em;
+  column-gap: 1em;
 }
 
 h1 {
@@ -44,6 +43,6 @@ p {
 @media (max-width: 600px) {
   .content, body, ol {
     display: block;
-    margin: 1em;
+    margin: 0.25em;
     font-size: 95%;
 }
