Added footnote to Destruction, added Focus function for links

--- a/talmud.css
+++ b/talmud.css
@@ -2,6 +2,7 @@
   font-family: Book Antiqua, Georgia;
   line-height: 1.5;
   text-align: justify;
+  background-color: bisque;
 }
 
 body {
@@ -42,7 +43,7 @@ h3 {
   margin-top: auto;
 }
 
-a:hover {
+a:hover, a:focus {
   color: greenyellow;
 }
 
